static/src/style/module/_colors.scss
$white: hsla(0, 0%, 100%, 1);
$black: hsla(0, 0%, 0%, 1);
$grey-light: hsla(0, 0%, 40%, 1);
$grey: hsla(0, 0%, 40%, 1);
$grey-dark: hsla(0, 0%, 20%, 1);

// exact color for seasonal teas picture
$seasonal-background-match: hsl(60, 12.9%, 96.9%);

// "Color" refers to the CSS property "color"...so, font color.
$color-body: #2f2f2f;
$color-heading: #3f3f3f;
$text-shadow: hsla(0, 0%, 20%, .2);

$neutral-lighter: hsla(60, 11%, 98%, 1);  // used in header
$neutral-light: hsla(60, 11.1%, 98.2%, 1);  // used as body bg
$neutral-light-cover: hsla(60, 11.1%, 98.2%, .85);
$neutral: hsla(60, 13.5%, 92.75%, 1); //used in footer bg
$neutral-dark: hsla(60,  12.7%, 87%, 1); //used for footer bottom
$button-green: hsla(120, 55.6%, 28.2%, .4);
$brand-green: hsla(120, 55.6%, 28.2%, 1);
$brand-green-light: hsla(95.2, 49.5%, 36.5%, 1);
$brand-green-lighter: hsla(115.4, 21%, 75.7%, 1);
$brand-red: hsla(4.8, 47.5%, 46.3%, 1);
$brand-border: hsla(60, 12.7%, 84%, 1); //used for divider lines and form field borders

